--- a/rules.html
+++ b/rules.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>청송학당 이용 수칙</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'GmarketSansTTFLight', Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            padding: 20px;
+        }
+        .rules-container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .rules-container h1 {
+            font-family: 'BMKkubulim', Arial, sans-serif;
+            font-size: 2.5em;
+            color: #9dcd17;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .rules-container ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .rules-container ul li {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        .rules-container ul li::before {
+            content: "•";
+            color: #9dcd17;
+            font-size: 1.5em;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="rules-container">
+        <h1>청송학당 이용 수칙</h1>
+        <ul>
+            <li>청송학당은 조용한 학습 환경을 유지하기 위해 노력합니다. 대화는 최소한으로 줄여주세요.</li>
+            <li>모든 개인 물품은 자리에 두지 말고, 지정된 보관함에 보관해주세요.</li>
+            <li>음식물 반입은 금지되어 있습니다. 물 이외의 음료는 허용되지 않습니다.</li>
+            <li>휴대전화는 무음으로 설정하고, 통화는 학당 외부에서 해주세요.</li>
+            <li>학당 내 시설물은 깨끗하게 사용하고, 훼손 시 즉시 관리자에게 알려주세요.</li>
+            <li>지정된 좌석만 사용하며, 자리 이동 시 관리자에게 알려주세요.</li>
+            <li>쓰레기는 반드시 분리수거하고, 자리를 떠날 때는 주변을 정리해주세요.</li>
+            <li>타인에게 불편을 주는 행동은 삼가해주세요. 모두가 쾌적한 환경에서 학습할 수 있도록 협조 부탁드립니다.</li>
+        </ul>
+    </div>
 </body>
 </html>
